--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="./public/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viettin Valuation</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
